[package]
name = "bitset_collection"
version = "0.1.0"
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collection_trait = { path = "../collection_trait" }
hibitset = "0.6.3"